--- a/apps/gmail-operator/Dockerfile
+++ b/apps/gmail-operator/Dockerfile
@@ -6,14 +6,14 @@ WORKDIR /home/node/app
 
 COPY . .
 
-RUN chown node:node *
+RUN chown -R node:node /home/node/app
 
 RUN npm install && npm cache clean --force --loglevel=error
 RUN npm run build
 
 EXPOSE 3000
 
-RUN chown node:node *
+RUN chown -R node:node /home/node/app
 RUN ls -la /home/node/app/dist
 
 USER node
