--- a/apps/gmail-operator/Dockerfile
+++ b/apps/gmail-operator/Dockerfile
@@ -4,11 +4,10 @@ RUN mkdir /home/node/app/ && chown -R node:node /home/node/app
 
 WORKDIR /home/node/app
 
-COPY . .
-
-RUN chown -R node:node /home/node/app
-
+COPY package*.json ./
 RUN npm install && npm cache clean --force --loglevel=error
+
+COPY . .
 RUN npm run build
 
 EXPOSE 3000
@@ -17,4 +16,4 @@ RUN chown -R node:node /home/node/app
 RUN ls -la /home/node/app/dist
 
 USER node
-CMD [ "npm", "run", "dev"]
+CMD [ "node", "dist/index.js"]
