--- a/apps/gmail-operator/Dockerfile
+++ b/apps/gmail-operator/Dockerfile
@@ -1,19 +1,31 @@
-FROM node:lts-hydrogen
+FROM node:lts-alpine as build-base
+RUN apk add --update --no-cache \
+  python3 \
+  make \
+  g++ \
+  bash \
+  gcc
 
-RUN mkdir /home/node/app/ && chown -R node:node /home/node/app
-
-WORKDIR /home/node/app
-
+FROM build-base AS build
+WORKDIR /usr/src/app
 COPY package*.json ./
-RUN npm install && npm cache clean --force --loglevel=error
-
-COPY . .
+RUN npm ci
+COPY src ./src
+COPY tsconfig.json .
 RUN npm run build
 
-EXPOSE 3000
+FROM build-base AS libraries
+WORKDIR /usr/src/app
+COPY package*.json ./
+RUN npm ci --omit=dev
 
-RUN chown -R node:node /home/node/app
-RUN ls -la /home/node/app/dist
-
+FROM node:lts-alpine
+RUN apk add --update --no-cache dumb-init
+ENV NODE_ENV production
 USER node
-CMD [ "node", "dist/index.js"]
+WORKDIR /usr/src/app
+COPY --chown=node:node --from=libraries /usr/src/app/node_modules /usr/src/app/node_modules
+
+COPY --chown=node:node --from=build /usr/src/app/dist/ /usr/src/app/
+EXPOSE 3000
+CMD ["dumb-init", "node", "index.js"]
