fix(gmail-operator) fixed docker 2?

--- a/apps/gmail-operator/Dockerfile
+++ b/apps/gmail-operator/Dockerfile
@@ -19,6 +19,10 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm ci --omit=dev
 
+FROM build-base AS crds
+WORKDIR /usr/src/
+COPY crds/*.yaml ./crds
+
 FROM node:lts-alpine
 RUN apk add --update --no-cache dumb-init
 ENV NODE_ENV production
