fix(gmailctl): docker fix

--- a/apps/gmailctl/Dockerfile
+++ b/apps/gmailctl/Dockerfile
@@ -3,10 +3,12 @@ FROM golang:1.18-bullseye as INSTALL
 ENV CONFIG_DIR=/config
 
 RUN go install github.com/mbrt/gmailctl/cmd/gmailctl@latest
+
+RUN mkdir /home/node/app/ && chown -R node:node /home/node/app
+RUN mv /go/bin/gmailctl /home/node/app/gmailctl
 RUN gmailctl init --config $CONFIG_DIR
 
 FROM node:lts-hydrogen
-RUN mkdir /home/node/app/ && chown -R node:node /home/node/app
 
 WORKDIR /home/node/app
 
@@ -18,6 +20,7 @@ RUN npm install && npm cache clean --force --loglevel=error
 COPY runner.js .
 
 RUN chown node:node runner.js
+RUN chown node:node gmailctl
 
 EXPOSE 3000
 
