fix: bitwarden-backup final dockerfile fixes

--- a/apps/bitwarden-backup/Dockerfile
+++ b/apps/bitwarden-backup/Dockerfile
@@ -7,6 +7,8 @@ RUN go build -ldflags="-s -w"
 FROM debian:bookworm-slim
 ENV GIN_MODE=release
 
+USER root
+
 COPY deb/veracrypt-console-1.25.9-Debian-12-amd64.deb /opt/veracrypt.deb
 COPY deb/VeraCrypt_PGP_public_key.asc /opt/veracrypt.sig
 
@@ -18,6 +20,9 @@ RUN gpg --dearmor /opt/veracrypt.sig && \
     apt-key add /opt/veracrypt.sig && \
     apt install /opt/veracrypt.deb --yes
 
+RUN rm -rf /opt/veracrypt.deb && \
+    rm -rf /opt/veracrypt.sig
+
 WORKDIR /usr/local/bin
 RUN apt update && apt install -y curl unzip libsecret-1-0 jq
 RUN export VER=$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/bitwarden/clients/releases | jq  -r 'sort_by(.published_at) | reverse | .[].name | select( index("CLI") )' | sed 's:.*CLI v::' | head -n 1) && \
@@ -28,8 +33,18 @@ COPY --from=go-build /bitwarden-backup /usr/local/bin
 
 RUN chmod +x /usr/local/bin/bitwarden-backup
 
-RUN mkdir -p /.config/Bitwarden\ CLI
-RUN touch /.config/Bitwarden\ CLI/data.json
-RUN chmod 777 /.config/Bitwarden\ CLI/data.json
+RUN \
+    adduser kah \
+        --uid 568 \
+        --group \
+        --system \
+        --disabled-password \
+        --home /home/kah \
+    && \
+    mkdir -p /home/kah/.config \
+    && chown -R kah:kah /home/kah/.config \
+    && chmod -R 775 /home/kah/.config
+
+USER kah
 
 CMD ["bitwarden-backup"]
